# PythonRepoTemplate

./: .gitignore  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  publish_pypi.yml  ruff.yml
