[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "package_name"
authors = [
    {name = "LightDestory", email = "apb231@gmail.com"},
]
description = "Python package description"
readme = "README.md"
license = {text = "GPL-3.0 license"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
]

[project.optional-dependencies]
extra = [
    "ruff",
    "pytest",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

# [project.scripts]
# entrypoint-clu = "main:main_cli"

[project.urls]
Repository = "https://github.com/LightDestory/python-package-template"
Issues = "https://github.com/LightDestory/python-package-template/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"